# job-star

./: .gitignore  CODE_REVIEW.md  HANDOFF.md  UPGRADE.md  USER_GUIDE.md  package.json  pyproject.toml  run-panel.sh  run-tmux-panel.sh  tsconfig.json
deploy/: job-star.caddy
deploy/systemd/: job-star-api.service  job-star-panel.service  job-star-worker-gatehouse.service  job-star-worker.service
docs/: check-ins.md  feynman-thinking-plan.md
job_star/: __init__.py  __main__.py  cli.py  commentary.py  dashboard.py  db.py  models.py  monitor.py  notify.py  orchestrator.py  panel.py  scheduler.py  upgrade.py  vikunja.py  worker_core.py
job_star/api/: __init__.py  __main__.py  app.py  auth.py  checkin_page.html  checkins_page.html  events.py  goal_detail_page.html  goals_page.html  intake_page.html  models.py  panel.html  routes.py
job_star/checkin/: __init__.py  engine.py
job_star/conflict/: __init__.py  detector.py
job_star/executors/: __init__.py  default.py  gatehouse_ai.py  job_star.py  pr_executor.py  research.py
job_star/followup/: __init__.py  engine.py
job_star/gatehouse/: __init__.py  client.py  monitor.py
job_star/idle/: __init__.py  loop.py
job_star/intake/: __init__.py  handler.py
job_star/model_registry/: __init__.py  (+6 more)
sql/: schema.sql
src/: ai.ts  cli.ts  db.ts  planParser.ts
tests/: test_fallback_integration.py  test_integration.py  test_model_fallback.py  test_monitor_anomaly.py  test_proof_completion_gate.py  test_proof_verifier.py  test_quality_control.py  test_upgrade_splitter.py  test_witness_store.py  test_worker_backoff.py
(+23 files in other folders)
