[project]
name = "job-star"
version = "0.1.0"
description = "Constrained, supervised, goal-oriented AI orchestration"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "rich>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
job-star = "job_star.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
packages = [
    "job_star",
    "job_star.triage",
    "job_star.router",
    "job_star.conflict",
    "job_star.intake",
    "job_star.supervisor",
    "job_star.idle",
    "job_star.followup",
    "job_star.gatehouse",
    "job_star.api",
    "job_star.worker",
]